# crm-message-generator

./: .env_example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  todo.md
.github/workflows/: deploy.yml
agents/: __init__.py  config.py  global_memory_cache.py  persona_example.json  service.py
agents/message/: agent.py
agents/message/.adk/: session.db
agents/message/plugins/: status_logging.py
agents/message/sub_agents/: message_generate_pipeline.py  strategic_message_prompt.py  types.py
agents/message/sub_agents/message_generate_pipeline/: agent.py  pipelines.py
agents/message/sub_agents/message_generate_pipeline/sub_agents/checker/: agent.py  prompt.py
agents/message/sub_agents/message_generate_pipeline/sub_agents/evaluator/: agent.py  prompt.py
agents/message/sub_agents/message_generate_pipeline/sub_agents/generator/: agent.py  prompt.py
agents/message/sub_agents/performance_estimation/: agent.py  callback.py  pipeline.py  prompt.py  utils.py
agents/message/sub_agents/report/: agent.py  pipeline.py  prompt.py
agents/persona/: agent.py
agents/persona/.adk/: session.db
database/: rds.db  vector.db  vector_manager.py
src/: config.py  main.py
src/database/: session.py
src/message/: config.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/runner/: runner.py
tests/: conftest.py
tests/agents/message/sub_agents/performance_estimation/: test_utils.py  test_vector_search.py
tests/database/: test_database.py  test_models.py  test_vector_logic.py  test_vector_manager.py
