[project]
name = "crm-message-generator"
version = "0.1.0"
description = "아모레 퍼시픽 AI INNOVATION CHALLENGE 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.10",
    "google-adk",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.1",
    "pydantic-settings>=2.7.0",
    "pytest>=8.0.0",
    "alembic>=1.17.2",
    "holidayskr>=0.2.0",
]

[tool.pytest.ini_options]
addopts = "-s"
